fix contact-cta alignment

--- a/wp-content/themes/ecosystem-energy/assets/styles/partials/common/_contact-cta.scss
+++ b/wp-content/themes/ecosystem-energy/assets/styles/partials/common/_contact-cta.scss
@@ -1,15 +1,18 @@
 .contact-cta {
   height: 600px;
   margin-top: 100px;
-  padding-top: 100px;
-  padding-bottom: 100px;
 
-  .container { position: relative; }
+  .container { 
+    position: relative;
+    @include flex();
+    flex-direction: column;
+    height: 100%;
+  }
 
   #cta-spinner {
     position: absolute;
     left: 50%;
-    top: -40%;
+    top: 0;
     height: 600px;
     width: 600px;
     transform: translateX(-50%);
@@ -25,13 +28,13 @@
 
   .title { 
     max-width: 600px;
-    margin: 0 auto 30px;
-    padding-top: 70px;
+    margin: auto auto 0 auto;
+    padding: 0;
     @include fontSize(60, 70, 500, -1);
     text-align: center;
   }
 
-  .btn { margin: auto; }
+  .btn-ctn { margin: 40px 0 auto 0; }
 
   @media (max-width: $tablet) {
     height: 380px;
@@ -42,10 +45,7 @@
         width: 300px;
       }
 
-      .title { 
-        padding-top: 0;
-        @include fontSize(38, 46, 600); 
-      }
+      .title { @include fontSize(38, 46, 600); }
     }
   }
 }
